feat: added toDo item delete button functionality

--- a/src/index.html
+++ b/src/index.html
@@ -390,9 +390,10 @@
                         id="project-choice"
                         name="project-choice"
                       />
-                      <datalist id="project-choice-list">
+                      <!-- already exists so there is no need for it..., its better to work with just one -->
+                      <!-- <datalist id="project-choice-list">
                         <option value="texst"></option>
-                      </datalist>
+                      </datalist> -->
                     </div>
                     <div>
                       <label for="TaskName">Task Name:</label>
