feat: added clear button for the form

--- a/src/index.html
+++ b/src/index.html
@@ -226,6 +226,9 @@
                     <input type="text" name="notes" id="notes" />
                   </div>
                   <div id="addTaskFormButtons">
+                    <button class="buttonStyle formClearButton" id="addTaskFormClear">
+                        clear
+                      </button>
                     <button class="buttonStyle" id="addTaskDialogCancel">
                       CANCEL
                     </button>
@@ -445,6 +448,9 @@
                       <input type="text" name="notes" id="notes" />
                     </div>
                     <div id="editTaskFormButtons">
+                        <button class="buttonStyle formClearButton" id="editTaskFormClear">
+                            clear
+                          </button>
                       <button class="buttonStyle" id="editTaskDialogCancel">
                         CANCEL
                       </button>
